...
    /// - Parameters:
    ///   - inputViewStyleManager: instance of manager to customize view
    ///   - inputViewDarkModeStyleManager: instance of dark mode manager to customize view
    @objc override public init(inputViewStyleManager: InputViewStyleManager? = nil, inputViewDarkModeStyleManager: InputViewStyleManager? = nil) {
        super.init(inputViewStyleManager: inputViewStyleManager, inputViewDarkModeStyleManager: inputViewDarkModeStyleManager)
        accessibilityIdentifier = "st-security-code-input"
        textField.accessibilityIdentifier = "st-security-code-input-textfield"
        errorLabel.accessibilityIdentifier = "st-security-code-input-message"
    }

    @available(*, unavailable)
    required init?(coder _: NSCoder) {
        fatalError("init(coder:) has not been implemented")
...
