...

    private let keys = CocoapodsIntegrationKeys()
    private var payForm: DropInController?

    private lazy var showDropInViewButton: UIButton = {
        let button = UIButton()
        button.setTitle("Checkout", for: .normal)
        button.setTitleColor(.black, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(showPayForm), for: .touchUpInside)
        return button
    }()

...
