...
    ///   - inputViewDarkModeStyleManager: instance of dark mode manager to customize view
    @objc public init(cardTypeContainer: CardTypeContainer = CardTypeContainer(cardTypes: CardType.allCases), cardNumberSeparator: String = .space, inputViewStyleManager: InputViewStyleManager? = nil, inputViewDarkModeStyleManager: InputViewStyleManager? = nil) {
        self.cardTypeContainer = cardTypeContainer
        self.cardNumberSeparator = cardNumberSeparator
        super.init(inputViewStyleManager: inputViewStyleManager, inputViewDarkModeStyleManager: inputViewDarkModeStyleManager)
        accessibilityIdentifier = "st-card-number-input"
        textField.accessibilityIdentifier = "st-card-number-input-textfield"
        errorLabel.accessibilityIdentifier = "st-card-number-message"
    }

    @available(*, unavailable)
    required init?(coder _: NSCoder) {
        fatalError("init(coder:) has not been implemented")
...
